# EasyTunr-ReactNative

./: .gitignore  App.js  app.json  metro.config.js  package-lock.json  package.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/easytunr/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
ios/: Podfile
ios/EasyTunr.xcodeproj/: project.pbxproj
ios/EasyTunr.xcodeproj/xcshareddata/xcschemes/: EasyTunr.xcscheme
screens/: AudioScreen.js  ConversionsScreen.js  HomeScreen.js  LoginScreen.js  PhotoConverter.js  RegisterScreen.js
server/: .env  pyproject.toml  server.py
