[project]
name = "easytunr-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Veneiro",email = "veneiroyt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "bson (>=0.5.10,<0.6.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "flask (>=3.1.0,<4.0.0)",
    "flask-cors (>=5.0.1,<6.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "flask-bcrypt (>=1.0.1,<2.0.0)",
    "flask-jwt-extended (>=4.7.1,<5.0.0)",
    "flask-pymongo (>=3.0.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
